src/dotnet/APIView/APIViewWeb/Client/css/site.scss
/* Mixins used below
-------------------------------------------------- */
@mixin placeholder {
    ::-webkit-input-placeholder {
        @content
    }
    :-moz-placeholder {
        @content
    }
    ::-moz-placeholder {
        @content
    }
    :-ms-input-placeholder {
        @content
    }
}

a.navbar-brand
{
    white-space: normal;
    text-align: center;
    word-break: break-all;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
    font-size: 1rem;
    line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    /* Set the fixed height of the footer here */
    height: 60px;
    line-height: 60px;
    /* Vertically center the text there */
}

/* Code rendering classes
------------------------------------------------- */
.keyword {
    color: blue;
}

.type {
    color: #B93D3D;
}

.enum {
    color: #8700BD;
}

.class {
    color: #00B8B1;
}

.specialName {
    color: #A400EB;
    font-weight: bold;
}

.name {
    color: black;
}

.value {
    color: #00B80F;
}

form.comment {
    padding: 12px;
}

.comment-actions {
    float: right;
    margin-left: 10px;
    margin-right: -5px;
}

.comment-row {
    border: 1px solid gray;
    border-spacing: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: white;
}

.comment-cancel-button {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
}

.comment-cell {
    padding: 10px;
    vertical-align: top;
}

.comment-contents {
    max-width: 592px;
    margin-bottom: 3px;
    overflow-wrap: break-word;
}

.comment-header {
    margin-bottom: 0px;
    line-height: 0.8 !important;
    display: inline;
}

.comment-holder {
    max-width: 780px;
}

.comment-icon {
    border-radius: 3px;
    display: inline-block;
    line-height: 1;
    overflow: hidden;
    vertical-align: middle;
}

.comment-submit-button {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    margin: 0 4px 0;
}

.review-comment {
    padding: 4px 16px;
    position: relative;
}

.review-comment:first-child {
    padding-top: 16px;
}

.review-comment p {
    margin-bottom: 0;
}

.review-comment blockquote {
    padding-left: 14px;
    padding-right: 14px;
    border-left-color: #E9E5E2;
    border-left-style: solid;
    border-left-width: 3.5px;
    color: #6A737D;
}

.comments-resolved {
    display: none;
}

.commentable {
    cursor: pointer;
}

@include placeholder {
    font-style: italic;
}

.code-window {
    font-size: 14px;
    line-height: 1.5;
    border-collapse: separate;
    width: 100%;
    tab-size: 8;
    border-spacing: 0;
    padding-top: 8px;
    padding-bottom: 8px;
}

.code-line {
    white-space: pre;
    font-family: monospace;
    line-height: 20px;
}

.code-line:hover .line-comment-button {
    opacity: 1;
}

.line-comment-button:hover {
    transform: scale(1);
}

.line-comment-button {
    position: relative;
    z-index: 5;
    float: left;
    width: 22px;
    height: 22px;
    margin: -2px -10px -2px -20px;
    line-height: 21px;
    color: #fff !important;
    text-align: center;
    text-indent: 0;
    cursor: pointer;
    background-color: #0366d6;
    background-image: linear-gradient(#0372ef, #0366d6);
    border-radius: 3px;
    box-shadow: 0 1px 4px rgba(27, 31, 35, .15);
    opacity: 0;
    transition: transform .1s ease-in-out;
    transform: scale(.8);
    user-select: none;
    text-decoration: none;
}

.code {
    line-height: 20px;
    padding-left: 10px;
    padding-right: 10px;
    position: relative;
    vertical-align: top;
}

code-inner {
    color: #24292E;
    overflow: visible;
    word-wrap: normal;
}

.rounded-1 {
    border-radius: 3px !important;
}

.review-thread-reply {
    background-color: #F6F8FA;
    border-radius: 0 0 3px 3px;
    border-top: 1px solid #E1E4E8;
    border-bottom: 1px solid #E1E4E8;
    padding: 8px 16px;
    display: table;
    width: 100%;
}

.review-thread-reply-button {
    cursor: text;
    display: inline-block;
    min-height: 28px;
    padding: 3px 8px;
    width: 100%;
}

.reply-cell {
    display: table-cell;
}

.new-thread-comment {
    border-radius: 3px;
    line-height: 1.5;
    border-collapse: separate;
    tab-size: 8;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #F6F8FA;
}

.new-thread-comment-text {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    background-color: #F6F8FA;
    max-width: 758px;
}

.comment-thread-contents.new-thread-comment {
    background-color: #FFF;
    border: 0;
    margin: -8px -16px;
}

.btn-upvote {
    filter: grayscale(100%) opacity(30%);
    &.active {
        filter: unset;
    }
}

.new-comment-content {
    position: relative;
    margin: 0 4px 8px;
}

.media {
    margin-bottom: 5px;
}

.login-button {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
}

.info-text {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
}

.line-comment-button-cell {
    user-select: none;
    width: 1em;
    white-space: normal;
}

.line-comment-button-cell::before {
    display: block;
    height: 0;
    width: 0;
}

.btn-link.line-comment-button {
    border: 0;
    opacity: 0;
    padding: 0;
    text-decoration: none;
    user-select: none;
    white-space: nowrap;
}

.namespace-view {
    font-size: 14px;
    font-family: monospace;
}

/* NAV */

.nav-list {
    list-style-type: none;
    padding-left: 0px;
}

.nav-list-children {
    list-style-type: none;
    text-overflow: ellipsis;
    padding-left: 0;
    margin-bottom: 0 !important; // prevents flickering in stickySidebar
}

.nav-list-children>li {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.nav-list-toggle {
    padding-left: 14px;
    background: url(/icons/down.png) center left no-repeat;
}

.nav-list-collapsed>.nav-list-toggle {
    background: url(/icons/right.png) center left no-repeat;
}

.nav-list-collapsed>.nav-list-children {
    display: none;
}

.nav-list-group .nav-list-children {
    padding-left: 14px;
}

/* DIAGNOSTICS */
.code-diagnostics td {
    border: 1px solid red;
    background-color: lightpink;
}

.code-diagnostics p {
    margin: 0;
}

/* ICONS */
.icon {
    height: 16px;
    width: 16px;
    display: inline-block;
    vertical-align: middle;
}

.icon-class {
    background: url(/icons/class.png) center left no-repeat;
}

.icon-interface {
    background: url(/icons/interface.png) center left no-repeat;
}

.icon-struct {
    background: url(/icons/struct.png) center left no-repeat;
}

.icon-enum {
    background: url(/icons/enum.png) center left no-repeat;
}

.icon-delegate {
    background: url(/icons/delegate.png) center left no-repeat;
}

.icon-unknown {
    background: url(/icons/type.png) center left no-repeat;
}

.icon-assembly {
    background: url(/icons/assembly.png) center left no-repeat;
}

.icon-namespace {
    background: url(/icons/namespace.png) center left no-repeat;
}

.icon-package {
    background: url(/icons/package.png) center left no-repeat;
}

.icon-comments {
    cursor: pointer;
    position: absolute;
    width: 16px;
    height: 16px;
    z-index: 1;
}
.code-added {
    background-color: #e6ffed;
}
.code-removed {
    background-color: #ffeef0;
}

